[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.72.0",
    "beautifulsoup4>=4.14.2",
    "google-generativeai>=0.8.0",
    "numpy>=2.3.4",
    "openai>=2.7.1",
    "replit-object-storage>=1.0.2",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "streamlit>=1.51.0",
    "tenacity>=9.1.2",
    "trafilatura>=2.0.0",
]
